<?xml version="1.0" encoding="utf-8"?>

<!-- This coordinator layout is used to fixed the navigation image, action text and menu image to the screen so that it doesn't scroll along with the screen  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black">

<!--    This NestedScrollView is used to scroll the view if the screen is not big enough to display all the contents-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center">

<!--        This is the base layout which holds the major content of this activity.
            It holds the six linear layouts which in turn holds the profile details of the characters used -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:context=".MainActivity">

<!--            Each linear layout inside this constraint layout holds the profile details of each character   -->
            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/linearLayoutStyle"
                android:layout_marginTop="515dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

<!--                These nested card views transforms the profile picture into a circular image, produce the circular border around the image
                    as well as provide padding between the profile image and the outer border around it.-->
                <androidx.cardview.widget.CardView
                    style="@style/outerCardView">
                    <androidx.cardview.widget.CardView
                        style="@style/middleCardView">
                        <androidx.cardview.widget.CardView
                            style="@style/innerCardView">
                            <ImageView
                                style="@style/profileImage"
                                android:contentDescription="@string/dybala"
                                android:src="@drawable/dybala" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/nameStyle"
                    android:text="@string/dybala" />
                <RatingBar
                    style="@style/RatingBarStyle"
                    android:numStars="2"
                    android:rating="2" />
                <TextView
                    style="@style/pointStyle"
                    android:text="@string/_412" />
            </LinearLayout>

<!--            This layout hold the option for the user to add an opponent to the app    -->
            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/linearLayoutStyle"
                android:layout_marginTop="515dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent">

<!--                Floating action button to be use for adding opponents-->
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="81dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/floatingButton"
                    android:padding="10dp"
                    app:backgroundTint="@color/dull"
                    app:srcCompat="@drawable/ic_baseline_add_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_new"
                    app:tint="@color/dull"
                    android:textColor="@color/dull"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/opponent"
                    android:textColor="@color/dull"
                    app:tint="@color/dull"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                style="@style/linearLayoutStyle"
                android:layout_marginTop="300dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    style="@style/outerCardView">
                    <androidx.cardview.widget.CardView
                        style="@style/middleCardView">
                        <androidx.cardview.widget.CardView
                            style="@style/innerCardView">
                            <ImageView
                                style="@style/profileImage"
                                android:contentDescription="@string/lewandoski"
                                android:src="@drawable/lewand" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/nameStyle"
                    android:text="@string/lewandoski" />
                <RatingBar
                    style="@style/RatingBarStyle"
                    android:numStars="4"
                    android:rating="4" />
                <TextView
                    style="@style/pointStyle"
                    android:text="@string/_658" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                style="@style/linearLayoutStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    style="@style/outerCardView">
                    <androidx.cardview.widget.CardView
                        style="@style/middleCardView">
                        <androidx.cardview.widget.CardView
                            style="@style/innerCardView">
                            <ImageView
                                style="@style/profileImage"
                                android:contentDescription="@string/cristiano_ronaldo"
                                android:src="@drawable/cristiano" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/nameStyle"
                    android:text="@string/cristiano_ronaldo" />
                <RatingBar
                    style="@style/RatingBarStyle"
                    android:numStars="5"
                    android:rating="5" />
                <TextView
                    style="@style/pointStyle"
                    android:text="@string/_1246" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                style="@style/linearLayoutStyle"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    style="@style/outerCardView">
                    <androidx.cardview.widget.CardView
                        style="@style/middleCardView">
                        <androidx.cardview.widget.CardView
                            style="@style/innerCardView">
                            <ImageView
                                style="@style/profileImage"
                                android:contentDescription="@string/lionel_messi"
                                android:src="@drawable/messi" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/nameStyle"
                    android:text="@string/lionel_messi" />
                <RatingBar
                    style="@style/RatingBarStyle"
                    android:numStars="5"
                    android:rating="5" />
                <TextView
                    style="@style/pointStyle"
                    android:text="@string/_3312" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                style="@style/linearLayoutStyle"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    style="@style/outerCardView">
                    <androidx.cardview.widget.CardView
                        style="@style/middleCardView">
                        <androidx.cardview.widget.CardView
                            style="@style/innerCardView">
                            <ImageView
                                style="@style/profileImage"
                                android:contentDescription="@string/neymar"
                                android:src="@drawable/neymar" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/nameStyle"
                    android:text="@string/neymar" />
                <RatingBar
                    style="@style/RatingBarStyle"
                    android:numStars="3"
                    android:rating="3" />
                <TextView
                    style="@style/pointStyle"
                    android:text="@string/_007" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

<!-- This linear layout holds the navigation image, action text and menu image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:weightSum="10">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_button"
        app:tint="@color/dull"
        android:src="@drawable/ic_baseline_navigate_before_24" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_marginTop="24dp"
        android:text="@string/choose_opponent"
        android:layout_marginStart="0dp"
        android:textColor="@color/dull"
        android:textSize="20sp"
        android:textStyle="bold"
        app:tint="@color/dull"
        android:gravity="center_horizontal" />
    <ImageView
        android:id="@+id/themeChanger"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:onClick="changeTheme"
        android:contentDescription="@string/tune"
        app:tint="@color/dull"
        android:src="@drawable/ic_baseline_tune_24" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>